--- a/inst/doc/SplicingGraphs.Rnw
+++ b/inst/doc/SplicingGraphs.Rnw
@@ -252,7 +252,7 @@ illustrated in Figure \ref{img:CIB3-simplified}.
 \section{Computing splicing graphs from annotations}
 
 
-\subsection{Choose and load a gene model}
+\subsection{Choosing and loading a gene model}
 
 The starting point for computing splicing graphs is a set of annotations
 describing a \textit{gene model} for a given organism. In \Bioconductor,
@@ -279,18 +279,21 @@ model to the genes located on chromosome 19. Let's use the
 \Rfunction{isActiveSeq} getter/setter for this. By default, all the
 chromosomes in a \Rclass{TranscriptDb} object are ``active'':
 
+\begin{small}
 <<isActiveSeq>>=
 isActiveSeq(txdb)
 @
+\end{small}
 
 Next we set all the values in this named logical vector to \Rcode{FALSE},
 except the value for \Rcode{chr19}:
 
 <<keep_chr19_only>>=
 isActiveSeq(txdb)[-match("chr19", names(isActiveSeq(txdb)))] <- FALSE
+names(which(isActiveSeq(txdb)))
 @
 
-\subsection{Generate a \Rclass{SplicingGraphs} object}
+\subsection{Generating a \Rclass{SplicingGraphs} object}
 
 Splicing graphs are computed by calling the \Rfunction{SplicingGraphs}
 function on the gene model. This is the constructor function for the
@@ -319,35 +322,82 @@ gene and \Rcode{names(sg)} gives the gene ids.
 names(sg)[1:20]
 @
 
+\subsection{Extracting information from a \Rclass{SplicingGraphs} object}
+
 The transcripts of a given gene can be extracted with \Rfunction{[[}.
 The result is an \emph{unnamed} \Rclass{GRangesList} object containing
 the exons grouped by transcript:
 
+\begin{small}
 <<sg_double_bracket_107328>>=
 sg[["107328"]]
 @
+\end{small}
 
 The exon-level metadata columns are:
-\begin{enumerate}
-  \item \Rcode{exon\_id}:
-  \item \Rcode{exon\_name}:
-  \item \Rcode{exon\_rank}:
-  \item \Rcode{start\_SSid}:
-  \item \Rcode{end\_SSid}:
-\end{enumerate}
+\begin{itemize}
+  \item \Rcode{exon\_id}: The original internal exon id as stored in the
+        \Rclass{TranscriptDb} object. This id was created and assigned to
+        each exon when the \Rclass{TranscriptDb} object was created.
+        It's not a public id (like e.g. an Ensembl, RefSeq, or GenBank id).
+        and is only guaranteed to be unique within a \Rclass{TranscriptDb}
+        object.
+  \item \Rcode{exon\_name}: The original exon name as provided by the
+        annotation resource (e.g. UCSC, Ensembl, or GFF file) and stored
+        in the \Rclass{TranscriptDb} object when it was created.
+        \Rcode{NA} if no exon name was provided.
+  \item \Rcode{exon\_rank}: The rank of the exon in the transcript.
+  \item \Rcode{start\_SSid}, \Rcode{end\_SSid}: The ids of the splicing
+        sites corresponding to the start and end positions of the exon.
+        Those ids were assigned by the \Rfunction{SplicingGraphs} constructor.
+\end{itemize}
+
+As mentioned previously, the splicing sites ids are assigned based on their
+order of appearance when moving in the 5' to 3' direction along the strand
+of the gene. This means that, for a gene on the minus strand, the ids in
+the \Rcode{start\_SSid} metadata column are greater than those in the
+\Rcode{end\_SSid} metadata column:
+
+\begin{small}
+<<sg_double_bracket_104252>>=
+sg[["104252"]]
+@
+\end{small}
+
+However, on both strands, the splicing site id increases with the
+rank of the exon.
 
 The \Rfunction{show} method for \Rclass{GRangesList} objects only
-displays the inner metadata columns (which are at the exon level in
-the case of \Rcode{sg[["107328"]]}). To see the outer metadata columns
-(transcript-level metadata columns in the case of \Rcode{sg[["107328"]]}),
+displays the inner metadata columns (which are at the exon level for
+objects like \Rcode{sg[["107328"]]}). To see the outer metadata columns
+(transcript-level metadata columns for objects like \Rcode{sg[["107328"]]}),
 we need to extract them explicitely:
 
 <<mcols_sg_double_bracket_107328>>=
 mcols(sg[["107328"]])
 @
 
-The transcripts in \Rcode{sg[["107328"]]} can be plotted with
-\Rfunction{plotTranscripts}:
+The transcript-level metadata columns are:
+\begin{itemize}
+  \item \Rcode{tx\_id}: The original transcript id as provided by the
+        annotation resource (e.g. UCSC, Ensembl, or GFF file) and stored
+        in the \Rclass{TranscriptDb} object when it was created.
+  \item \Rcode{txpaths}: A named list-like object with one list element
+        per transcript. Each list element is an integer vector that
+        describes the \textit{path} of the transcript i.e. the splicing
+        site ids it goes thru.
+\end{itemize}
+
+<<mcols_sg_double_bracket_107328>>=
+mcols(sg[["107328"]])$txpaths
+mcols(sg[["104252"]])$txpaths
+@
+
+Note that the list elements of the \Rcode{txpaths} metadata column are
+always made of an even number of increasing splicing site ids.
+
+The transcripts in a \Rclass{GRangesList} object like \Rcode{sg[["107328"]]}
+can be plotted with \Rfunction{plotTranscripts}:
 
 <<plotTranscripts_sg_107328,eval=FALSE>>=
 plotTranscripts(sg[["107328"]])
@@ -394,6 +444,8 @@ node ($R$) or ending at the leaf node ($L$)) are omitted:
 sgedgesByTranscript(sg)
 @
 
+\subsection{Plotting a splicing graph}
+
 To plot a given splicing graph:
 
 <<plot_sg_107328,eval=FALSE>>=
@@ -430,9 +482,9 @@ dev.off()
 
 Each graph in \Rcode{sg} contains information about the underlying splicing
 mechanisms for the corresponding gene. This information can be summarized
-by extracting the bubbles of a graph.
+by computing the bubbles of a graph.
 
-\subsection{Extract the bubbles}
+\subsection{Computing the bubbles of a splicing graph}
 
 <<bubbles_sg_107328>>=
 bubbles(sg["107328"])
