--- a/inst/doc/SplicingGraphs.Rnw
+++ b/inst/doc/SplicingGraphs.Rnw
@@ -316,7 +316,7 @@ if (!identical(sg, sg2))
 @
 
 \Rcode{sg} is a \Rclass{SplicingGraphs} object. It has 1 element per
-gene and \Rcode{names(sg)} gives the gene ids.
+gene and \Rcode{names(sg)} gives the gene ids:
 
 <<names_sg>>=
 names(sg)[1:20]
@@ -339,8 +339,8 @@ The exon-level metadata columns are:
   \item \Rcode{exon\_id}: The original internal exon id as stored in the
         \Rclass{TranscriptDb} object. This id was created and assigned to
         each exon when the \Rclass{TranscriptDb} object was created.
-        It's not a public id (like e.g. an Ensembl, RefSeq, or GenBank id).
-        and is only guaranteed to be unique within a \Rclass{TranscriptDb}
+        It's not a public id like, say, an Ensembl, RefSeq, or GenBank id,
+        and it's only guaranteed to be unique within a \Rclass{TranscriptDb}
         object.
   \item \Rcode{exon\_name}: The original exon name as provided by the
         annotation resource (e.g. UCSC, Ensembl, or GFF file) and stored
@@ -348,15 +348,20 @@ The exon-level metadata columns are:
         \Rcode{NA} if no exon name was provided.
   \item \Rcode{exon\_rank}: The rank of the exon in the transcript.
   \item \Rcode{start\_SSid}, \Rcode{end\_SSid}: The ids of the splicing
-        sites corresponding to the start and end positions of the exon.
+        sites corresponding to the start and end coordinates of the exon.
         Those ids were assigned by the \Rfunction{SplicingGraphs} constructor.
+        IMPORTANT NOTE: Please keep in mind that the start and end
+        coordinates of an exon, like the start and end coordinates of
+        a genomic range in general, are following the almost universal
+        convention that $start$ is $<= end$, and this \textbf{regardless
+        of the direction of transcription}.
 \end{itemize}
 
-As mentioned previously, the splicing sites ids are assigned based on their
+As mentioned previously, the splicing site ids are assigned based on their
 order of appearance when moving in the 5' to 3' direction along the strand
-of the gene. This means that, for a gene on the minus strand, the ids in
-the \Rcode{start\_SSid} metadata column are greater than those in the
-\Rcode{end\_SSid} metadata column:
+of the gene. This means that, for a gene on the plus (resp. minus) strand,
+the ids in the \Rcode{start\_SSid} metadata column are always lower (resp.
+greater) than those in the \Rcode{end\_SSid} metadata column:
 
 \begin{small}
 <<sg_double_bracket_104252>>=
@@ -385,7 +390,7 @@ The transcript-level metadata columns are:
   \item \Rcode{txpaths}: A named list-like object with one list element
         per transcript. Each list element is an integer vector that
         describes the \textit{path} of the transcript i.e. the splicing
-        site ids it goes thru.
+        site ids that it goes thru.
 \end{itemize}
 
 <<mcols_sg_double_bracket_107328>>=
@@ -393,8 +398,9 @@ mcols(sg[["107328"]])$txpaths
 mcols(sg[["104252"]])$txpaths
 @
 
-Note that the list elements of the \Rcode{txpaths} metadata column are
-always made of an even number of increasing splicing site ids.
+Note that the list elements of the \Rcode{txpaths} metadata column
+always consist of an even number of splicing site ids in ascending
+order.
 
 The transcripts in a \Rclass{GRangesList} object like \Rcode{sg[["107328"]]}
 can be plotted with \Rfunction{plotTranscripts}:
@@ -550,6 +556,7 @@ See Figure \ref{img:altaccept}
 \subsection{Tabulating all the alternative splicing codes for Mouse
             chromosome 19}
 
+\begin{small}
 <<AScode_summary>>=
 AScode_list <- lapply(seq_along(sg), function(i) bubbles(sg[i])$AScode)
 names(AScode_list) <- names(sg)
@@ -559,8 +566,14 @@ AScode_summary <- data.frame(AScode=names(AScode_table),
                              NbOfEvents=as.vector(AScode_table),
                              Desciption=ASCODE2DESC[names(AScode_table)])
 nrow(AScode_summary)
+@
+\end{small}
+
+\begin{small}
+<<head_AScode_summary>>=
 head(AScode_summary, n=10)
 @
+\end{small}
 
 Amongst the \Sexpr{nrow(AScode_summary)} distinct complete events we observe
 on Mouse chromosome 19, the most frequent one is named ``skip 1 exon''.
