Add "seqnames" and "strand" methods for SplicingGraphs objects.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74984 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/SplicingGraphs.Rnw
+++ b/inst/doc/SplicingGraphs.Rnw
@@ -705,9 +705,11 @@ head(sg50_counts)
 All of the output in this vignette was produced under the following
 conditions:
 
+\begin{small}
 <<SessionInfo>>=
 sessionInfo()
 @
+\begin{end}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
